# symulacja_pole_magnetyczne

./: .gitignore  CMakeLists.txt  README.md
elektron_w_polu/: CMakeLists.txt  elektron_w_polu.h
src/: Particle.cpp  Particle.h  main.cpp
